objects/BigObject3__b.object
<CustomObject>
    <fields>
        <fullName>Field1__c</fullName>
        <label>Field1</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Field2__c</fullName>
        <label>Field2</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Field3__c</fullName>
        <label>Field3</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <indexes>
        <fullName>Index</fullName>
        <fields>
            <name>Field1__c</name>
            <sortDirection>ASC</sortDirection>
        </fields>
        <fields>
            <name>Field3__c</name>
            <sortDirection>DESC</sortDirection>
        </fields>
        <fields>
            <name>Field2__c</name>
            <sortDirection>ASC</sortDirection>
        </fields>
        <label>Index</label>
    </indexes>
    <label>BigObject3</label>
    <pluralLabel>BigObject3s</pluralLabel>
</CustomObject>